kubernetes/apps/dev/gitea/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`git.toskbot.xyz`)
      kind: Rule
      services:
        - name: gitea-http
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: git.toskbot.xyz
